# Quinn4Android

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/crylog/quinn4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/crylog/quinn4android/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/crylog/quinn4android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
quinn4android/: build.gradle
quinn4android/quinn-rs-binding/: Cargo.toml  build.sh  readme.md
quinn4android/quinn-rs-binding/src/: lib.rs
quinn4android/src/main/: AndroidManifest.xml
quinn4android/src/main/java/com/crylog/quinn4android/: Quinn4Android.java  com_crylog_quinn4android_Quinn4Android.h
quinn4android/src/main/res/values-night/: themes.xml
