[package]
name = "quinn-rs-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }

[lib]
crate_type = ["cdylib"]

